src/Parser/MxParser.java
// Generated from Mx.g4 by ANTLR 4.9.1
package Parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MxParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, IntLiteral = 33, StrLiteral = 34, BoolLiteral = 35, NullLiteral = 36,
            Int = 37, Bool = 38, String = 39, Null = 40, Void = 41, True = 42, False = 43, If = 44,
            Else = 45, For = 46, While = 47, Break = 48, Continue = 49, Return = 50, New = 51, Class = 52,
            This = 53, Identifier = 54, Whitespace = 55, Newline = 56, BlockComment = 57, LineComment = 58;
    public static final int
            RULE_program = 0, RULE_programSub = 1, RULE_varDef = 2, RULE_varDefSub = 3,
            RULE_funcDef = 4, RULE_classDef = 5, RULE_paramList = 6, RULE_param = 7,
            RULE_type = 8, RULE_simpleType = 9, RULE_returnType = 10, RULE_block = 11,
            RULE_primary = 12, RULE_literal = 13, RULE_creator = 14, RULE_statement = 15,
            RULE_expression = 16, RULE_expressionList = 17;

    private static String[] makeRuleNames() {
        return new String[]{
                "program", "programSub", "varDef", "varDefSub", "funcDef", "classDef",
                "paramList", "param", "type", "simpleType", "returnType", "block", "primary",
                "literal", "creator", "statement", "expression", "expressionList"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "','", "';'", "'='", "'('", "')'", "'{'", "'}'", "'['", "']'",
                "'.'", "'++'", "'--'", "'+'", "'-'", "'!'", "'~'", "'*'", "'/'", "'%'",
                "'<<'", "'>>'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'&'",
                "'^'", "'|'", "'&&'", "'||'", null, null, null, null, "'int'", "'bool'",
                "'string'", "'null'", "'void'", "'true'", "'false'", "'if'", "'else'",
                "'for'", "'while'", "'break'", "'continue'", "'return'", "'new'", "'class'",
                "'this'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, "IntLiteral", "StrLiteral",
                "BoolLiteral", "NullLiteral", "Int", "Bool", "String", "Null", "Void",
                "True", "False", "If", "Else", "For", "While", "Break", "Continue", "Return",
                "New", "Class", "This", "Identifier", "Whitespace", "Newline", "BlockComment",
                "LineComment"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Mx.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public MxParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ProgramContext extends ParserRuleContext {
        public TerminalNode EOF() {
            return getToken(MxParser.EOF, 0);
        }

        public List<ProgramSubContext> programSub() {
            return getRuleContexts(ProgramSubContext.class);
        }

        public ProgramSubContext programSub(int i) {
            return getRuleContext(ProgramSubContext.class, i);
        }

        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).enterProgram(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).exitProgram(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxVisitor) return ((MxVisitor<? extends T>) visitor).visitProgram(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(39);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Bool) | (1L << String) | (1L << Void) | (1L << Class) | (1L << Identifier))) != 0)) {
                    {
                        {
                            setState(36);
                            programSub();
                        }
                    }
                    setState(41);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(42);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ProgramSubContext extends ParserRuleContext {
        public VarDefContext varDef() {
            return getRuleContext(VarDefContext.class, 0);
        }

        public FuncDefContext funcDef() {
            return getRuleContext(FuncDefContext.class, 0);
        }

        public ClassDefContext classDef() {
            return getRuleContext(ClassDefContext.class, 0);
        }

        public ProgramSubContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_programSub;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).enterProgramSub(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).exitProgramSub(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxVisitor) return ((MxVisitor<? extends T>) visitor).visitProgramSub(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgramSubContext programSub() throws RecognitionException {
        ProgramSubContext _localctx = new ProgramSubContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_programSub);
        try {
            setState(47);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(44);
                    varDef();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(45);
                    funcDef();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(46);
                    classDef();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VarDefContext extends ParserRuleContext {
        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public List<VarDefSubContext> varDefSub() {
            return getRuleContexts(VarDefSubContext.class);
        }

        public VarDefSubContext varDefSub(int i) {
            return getRuleContext(VarDefSubContext.class, i);
        }

        public VarDefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_varDef;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).enterVarDef(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).exitVarDef(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxVisitor) return ((MxVisitor<? extends T>) visitor).visitVarDef(this);
            else return visitor.visitChildren(this);
        }
    }

    public final VarDefContext varDef() throws RecognitionException {
        VarDefContext _localctx = new VarDefContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_varDef);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(49);
                type();
                setState(50);
                varDefSub();
                setState(55);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__0) {
                    {
                        {
                            setState(51);
                            match(T__0);
                            setState(52);
                            varDefSub();
                        }
                    }
                    setState(57);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(58);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VarDefSubContext extends ParserRuleContext {
        public TerminalNode Identifier() {
            return getToken(MxParser.Identifier, 0);
        }

        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public VarDefSubContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_varDefSub;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).enterVarDefSub(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).exitVarDefSub(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxVisitor) return ((MxVisitor<? extends T>) visitor).visitVarDefSub(this);
            else return visitor.visitChildren(this);
        }
    }

    public final VarDefSubContext varDefSub() throws RecognitionException {
        VarDefSubContext _localctx = new VarDefSubContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_varDefSub);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(60);
                match(Identifier);
                setState(63);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__2) {
                    {
                        setState(61);
                        match(T__2);
                        setState(62);
                        expression(0);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FuncDefContext extends ParserRuleContext {
        public TerminalNode Identifier() {
            return getToken(MxParser.Identifier, 0);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public ReturnTypeContext returnType() {
            return getRuleContext(ReturnTypeContext.class, 0);
        }

        public ParamListContext paramList() {
            return getRuleContext(ParamListContext.class, 0);
        }

        public FuncDefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_funcDef;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).enterFuncDef(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).exitFuncDef(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxVisitor) return ((MxVisitor<? extends T>) visitor).visitFuncDef(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FuncDefContext funcDef() throws RecognitionException {
        FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_funcDef);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(66);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
                    case 1: {
                        setState(65);
                        returnType();
                    }
                    break;
                }
                setState(68);
                match(Identifier);
                setState(69);
                match(T__3);
                setState(71);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Bool) | (1L << String) | (1L << Identifier))) != 0)) {
                    {
                        setState(70);
                        paramList();
                    }
                }

                setState(73);
                match(T__4);
                setState(74);
                block();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ClassDefContext extends ParserRuleContext {
        public TerminalNode Class() {
            return getToken(MxParser.Class, 0);
        }

        public TerminalNode Identifier() {
            return getToken(MxParser.Identifier, 0);
        }

        public List<VarDefContext> varDef() {
            return getRuleContexts(VarDefContext.class);
        }

        public VarDefContext varDef(int i) {
            return getRuleContext(VarDefContext.class, i);
        }

        public List<FuncDefContext> funcDef() {
            return getRuleContexts(FuncDefContext.class);
        }

        public FuncDefContext funcDef(int i) {
            return getRuleContext(FuncDefContext.class, i);
        }

        public ClassDefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_classDef;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).enterClassDef(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).exitClassDef(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxVisitor) return ((MxVisitor<? extends T>) visitor).visitClassDef(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ClassDefContext classDef() throws RecognitionException {
        ClassDefContext _localctx = new ClassDefContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_classDef);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(76);
                match(Class);
                setState(77);
                match(Identifier);
                setState(78);
                match(T__5);
                setState(83);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Bool) | (1L << String) | (1L << Void) | (1L << Identifier))) != 0)) {
                    {
                        setState(81);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                            case 1: {
                                setState(79);
                                varDef();
                            }
                            break;
                            case 2: {
                                setState(80);
                                funcDef();
                            }
                            break;
                        }
                    }
                    setState(85);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(86);
                match(T__6);
                setState(87);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParamListContext extends ParserRuleContext {
        public List<ParamContext> param() {
            return getRuleContexts(ParamContext.class);
        }

        public ParamContext param(int i) {
            return getRuleContext(ParamContext.class, i);
        }

        public ParamListContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_paramList;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).enterParamList(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).exitParamList(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxVisitor) return ((MxVisitor<? extends T>) visitor).visitParamList(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParamListContext paramList() throws RecognitionException {
        ParamListContext _localctx = new ParamListContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_paramList);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(89);
                param();
                setState(94);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__0) {
                    {
                        {
                            setState(90);
                            match(T__0);
                            setState(91);
                            param();
                        }
                    }
                    setState(96);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParamContext extends ParserRuleContext {
        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public TerminalNode Identifier() {
            return getToken(MxParser.Identifier, 0);
        }

        public ParamContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_param;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).enterParam(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).exitParam(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxVisitor) return ((MxVisitor<? extends T>) visitor).visitParam(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParamContext param() throws RecognitionException {
        ParamContext _localctx = new ParamContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_param);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(97);
                type();
                setState(98);
                match(Identifier);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TypeContext extends ParserRuleContext {
        public SimpleTypeContext simpleType() {
            return getRuleContext(SimpleTypeContext.class, 0);
        }

        public TypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_type;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).enterType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).exitType(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxVisitor) return ((MxVisitor<? extends T>) visitor).visitType(this);
            else return visitor.visitChildren(this);
        }
    }

    public final TypeContext type() throws RecognitionException {
        TypeContext _localctx = new TypeContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_type);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(100);
                simpleType();
                setState(105);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__7) {
                    {
                        {
                            setState(101);
                            match(T__7);
                            setState(102);
                            match(T__8);
                        }
                    }
                    setState(107);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SimpleTypeContext extends ParserRuleContext {
        public TerminalNode Int() {
            return getToken(MxParser.Int, 0);
        }

        public TerminalNode Bool() {
            return getToken(MxParser.Bool, 0);
        }

        public TerminalNode String() {
            return getToken(MxParser.String, 0);
        }

        public TerminalNode Identifier() {
            return getToken(MxParser.Identifier, 0);
        }

        public SimpleTypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_simpleType;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).enterSimpleType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).exitSimpleType(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxVisitor) return ((MxVisitor<? extends T>) visitor).visitSimpleType(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SimpleTypeContext simpleType() throws RecognitionException {
        SimpleTypeContext _localctx = new SimpleTypeContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_simpleType);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(108);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Bool) | (1L << String) | (1L << Identifier))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ReturnTypeContext extends ParserRuleContext {
        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public TerminalNode Void() {
            return getToken(MxParser.Void, 0);
        }

        public ReturnTypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_returnType;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).enterReturnType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).exitReturnType(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxVisitor) return ((MxVisitor<? extends T>) visitor).visitReturnType(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ReturnTypeContext returnType() throws RecognitionException {
        ReturnTypeContext _localctx = new ReturnTypeContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_returnType);
        try {
            setState(112);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case Int:
                case Bool:
                case String:
                case Identifier:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(110);
                    type();
                }
                break;
                case Void:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(111);
                    match(Void);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class BlockContext extends ParserRuleContext {
        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public BlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_block;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).enterBlock(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).exitBlock(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxVisitor) return ((MxVisitor<? extends T>) visitor).visitBlock(this);
            else return visitor.visitChildren(this);
        }
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_block);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(114);
                match(T__5);
                setState(118);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__5) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << IntLiteral) | (1L << StrLiteral) | (1L << BoolLiteral) | (1L << NullLiteral) | (1L << Int) | (1L << Bool) | (1L << String) | (1L << If) | (1L << For) | (1L << While) | (1L << Break) | (1L << Continue) | (1L << Return) | (1L << New) | (1L << This) | (1L << Identifier))) != 0)) {
                    {
                        {
                            setState(115);
                            statement();
                        }
                    }
                    setState(120);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(121);
                match(T__6);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PrimaryContext extends ParserRuleContext {
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public TerminalNode This() {
            return getToken(MxParser.This, 0);
        }

        public TerminalNode Identifier() {
            return getToken(MxParser.Identifier, 0);
        }

        public LiteralContext literal() {
            return getRuleContext(LiteralContext.class, 0);
        }

        public PrimaryContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_primary;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).enterPrimary(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MxListener) ((MxListener) listener).exitPrimary(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MxVisitor) return ((MxVisitor<? extends T>) visitor).visitPrimary(this);
            else return visitor.visitChildren(this);
        }
    }
